claude init moved code around

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "habit-tracker-21",
-	"name": "Habit Tracker 21",
-	"version": "1.4.5",
-	"minAppVersion": "1.1.0",
-	"description": "Your 21-day journey to habit formation, simplified",
-	"author": "Zoreet",
-	"authorUrl": "https://github.com/zoreet",
-	"isDesktopOnly": false,
-	"fundingUrl": "https://buymeacoffee.com/zincplusplus"
+	"id": "frontmatter-habits",
+	"name": "Frontmatter Habits",
+	"version": "0.1.0",
+	"minAppVersion": "1.5.0",
+	"description": "Track your habits in your Daily Notes frontmatter",
+	"author": "Stefan Danzl",
+	"authorUrl": "https://github.com/stefandanzl",
+	"isDesktopOnly": false
 }
