--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.4.4",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "frontmatter-habits",
+	"version": "0.1.0",
+	"description": "",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
