--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
-	"rootElement": true,
 	"parser": "@typescript-eslint/parser",
-	"env": {"node": true},
-	"plugins": ["@typescript-eslint"],
+	"env": {
+		"node": true
+	},
+	"plugins": [
+		"@typescript-eslint"
+	],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
@@ -13,7 +16,12 @@
 	},
 	"rules": {
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error", {"args": "none"}],
+		"@typescript-eslint/no-unused-vars": [
+			"error",
+			{
+				"args": "none"
+			}
+		],
 		"@typescript-eslint/ban-ts-comment": "off",
 		"no-prototype-builtins": "off",
 		"@typescript-eslint/no-empty-function": "off"
